# moba-game

./: .clangd  .gitmodules  ABILITY_ASSIGNMENT.md  ABILITY_GUIDES_INDEX.md  ABILITY_SLOTS_VISUAL.md  AGENTS.md  CMakeLists.txt  DEBUG_EXAMPLES.md  DEBUG_GUIDE.md  DEBUG_SETUP.md  DEBUG_SYSTEM_SUMMARY.md  DOTA_STYLE_CASTING.md  DebugLogger.gd  EDIT_ABILITIES_IN_EDITOR.md  GETTING_STARTED.md  INPUT_SETUP.md  LOGGING_MIGRATION_SUMMARY.md  MEMORY_LEAK_FIX_SUMMARY.md  MEMORY_PROFILING.md  MOBA_ROADMAP.md  OPENCODE_WORKFLOW.md  QUICK_START.md  README  README_DOCS.md  SESSION_SUMMARY.md  TARGETING_SYSTEM.md  TEST_ABILITIES_NOW.md  VFX_SYSTEM_FINAL_STATUS.md  WORKFLOW_SETUP_COMPLETE.md
docs/: README.md  (+5 more)
src/: CMakeLists.txt  attack_component.cpp  health_component.cpp  input_manager.cpp  input_manager.hpp  moba_camera.cpp  moba_camera.hpp  movement_component.cpp  movement_component.hpp  projectile.cpp  register_types.cpp  resource_pool_component.cpp  unit.cpp  unit.hpp  unit_component.cpp
src/ai/: CMakeLists.txt  test_movement.cpp
src/camera/: CMakeLists.txt  moba_camera.cpp
src/common/: CMakeLists.txt  casting_mode.hpp  order_utils.hpp  signal_name.hpp  unit_definition.cpp  unit_definition.hpp  unit_definition_manager.cpp  unit_definition_manager.hpp  unit_order.hpp  unit_signals.cpp  unit_signals.hpp
src/components/: CMakeLists.txt  unit_component.cpp  unit_component.hpp
src/core/: CMakeLists.txt  game_settings.cpp  game_settings.hpp  match_manager.cpp  match_manager.hpp  unit.cpp  unit.hpp
src/debug/: CMakeLists.txt  debug_logger.cpp  debug_logger.hpp  debug_macros.hpp  debug_mesh_renderer.cpp  debug_mesh_renderer.hpp  debug_utils.hpp  debug_visuals.cpp  debug_visuals.hpp  godot_debug_drawer.cpp  godot_debug_drawer.hpp  memory_profiler.cpp  (+5 more)
(+157 files in other folders)
